[package]
name = "observatory"
version = "0.1.0"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2018"

[dependencies]
askama = { version = "^0.8.0", features = ["with-rocket"] }
askama-filters = { version = "^0.1.1", features = ["markdown"] }
chrono = { version = "^0.4.6", features = ["serde"] }
diesel = { version = "^1.4.2", features = ["sqlite", "chrono"] }
rand = "^0.6.5"
rocket = "^0.4.0"
rss = "^1.7.0"
rust-embed = "^4.3.0"

# By using * we match the Rocket versions
ring = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"

[dependencies.rocket_contrib]
version = "^0.4.0"
default-features = false
features = ["diesel_sqlite_pool", "json"]