[package]
name = "observatory"
version = "0.1.0"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2018"

[dependencies]
askama = { version = "^0.8.0", features = ["with-rocket"] }
askama-filters = { version = "^0.1.1", features = ["markdown"] }
chrono = { version = "^0.4.6", features = ["serde"] }
diesel = { version = "^1.4.2", features = ["sqlite", "chrono"] }
diesel_migrations = "^1.4.0"
flexi_logger = { version = "0.14", features = ["specfile"] }
log = "0.4"
diesel-derive-newtype = "^0.1.2"
rand = "^0.7.0"
reqwest = "^0.9.16"
rocket = "^0.4.1"
rss = "^1.7.0"
rust-embed = "^5.1.0"

# By using * we match the library versions
regex = "*"
ring = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
base64 = "*"

# Need bundled version for sqlite in Docker
libsqlite3-sys = { version = "*", features = ["bundled"] }

[dependencies.rocket_contrib]
version = "^0.4.0"
default-features = false
features = ["diesel_sqlite_pool", "json"]

[profile.release]
lto = true
opt-level = 3
