[package]
name = "observatory"
version = "0.1.0"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2018"
license = "MIT AND CC-BY-4.0"

[dependencies]
askama = { version = "^0.9.0", features = ["with-rocket"] }
askama-filters = { version = "^0.1.3", features = ["markdown"] }
chrono = { version = "^0.4.10", features = ["serde"] }
diesel = { version = "^1.4.3", features = ["sqlite", "chrono"] }
diesel_migrations = "^1.4.0"
flexi_logger = { version = "^0.16.3", features = ["specfile"] }
icalendar = "^0.9.0"
log = "^0.4.8"
diesel-derive-newtype = "^0.1.2"
rand = "^0.7.3"
rocket = "^0.4.2"
rss = "^1.9.0"
rust-embed = "^5.2.0"
http_req = "^0.7.0"

# By using * we match the library versions
base64 = "*"
regex = "*"
ring = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"

# Need bundled version for sqlite in Docker
libsqlite3-sys = { version = "*", features = ["bundled"] }

[dependencies.rocket_contrib]
version = "^0.4.0"
default-features = false
features = ["diesel_sqlite_pool", "json"]

[profile.release]
lto = true
opt-level = 3
